Security Fix: CWE-89