@@ -2,12 +2,13 @@ package com.demo;
 
 import java.sql.Connection;
 import java.sql.DriverManager;
-import java.sql.Statement;
+import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.util.regex.Pattern;
 
 public class VulnerableApp {
     // CWE-798: Hardcoded Credentials
@@ -18,11 +19,10 @@ public class VulnerableApp {
         String password = request.getParameter("password");
         
         Connection conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/db", "root", DB_PASSWORD);
-        Statement stmt = conn.createStatement();
-        
-        // CWE-89: SQL Injection
-        String query = "SELECT * FROM users WHERE username = '" + username + "' AND password = '" + password + "'";
-        ResultSet rs = stmt.executeQuery(query);
+        PreparedStatement pstmt = conn.prepareStatement("SELECT * FROM users WHERE username = ? AND password = ?");
+        pstmt.setString(1, username);
+        pstmt.setString(2, password);
+        ResultSet rs = pstmt.executeQuery();
         
         if (rs.next()) {
             response.getWriter().println("Logged in!");
@@ -34,8 +34,15 @@ public class VulnerableApp {
     public void ping(HttpServletRequest request, HttpServletResponse response) throws Exception {
         String ip = request.getParameter("ip");
         
-        // CWE-78: OS Command Injection
-        Process process = Runtime.getRuntime().exec("ping -c 4 " + ip);
+        // Validate IP address
+        if (!Pattern.matches("^([0-9]{1,3}\.){3}[0-9]{1,3}$", ip)) {
+            response.getWriter().println("Invalid IP address!");
+            return;
+        }
+        
+        // Use ProcessBuilder to execute the command with arguments
+        ProcessBuilder processBuilder = new ProcessBuilder("ping", "-c", "4", ip);
+        Process process = processBuilder.start();
         BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
         String line;
         while ((line = reader.readLine()) != null) {
